Got ground mesh to visualize

--- a/front/index.html
+++ b/front/index.html
@@ -1,16 +1,22 @@
 <html>
 <head>
+    <meta charset="UTF-8"/>
+
     <title>Will Jackson's Garden of Eden</title>
-    <style>canvas { width: 80%; height: 80% }</style> 
+    <style>canvas { width: 100%; height: 100% }</style> 
     
     <!-- Javascript libraries -->
-    <script src="js/three.min.js"></script>
+    <script src="./js/jquery-2.0.2.min.js"></script>
+    <script src="./js/three.min.js"></script>
+    <script src="./js/require.min.js"></script>
+    
 
 </head>
 
 <body>
     <!-- Scripts -->
-    <script src="js/scripts/hello.js"></script>
+    <!-- <script src="./js/scripts/hello.js"></script> -->
+    <script src="./js/scripts/terrain.js"></script>
 
 </body>
 </html>
