Tried to get Require.js working properly, but it requires significant bootstrapping to use three.js. Deemed not worth it for the near future, so I made some weird object method of inclusion. Might go back, but not for now

--- a/index.html
+++ b/index.html
@@ -6,17 +6,15 @@
     <style>canvas { width: 100%; height: 100% }</style> 
     
     <!-- Javascript libraries -->
-    <script src="./js/jquery-2.0.2.min.js"></script>
-    <script src="./js/three.min.js"></script>
-    <script src="./js/require.min.js"></script>
-    
+    <script src="./js/lib/three.min.js"></script>
 
 </head>
 
 <body>
-    <!-- Scripts -->
-    <!-- <script src="./js/scripts/hello.js"></script> -->
-    <script src="./js/scripts/terrain.js"></script>
+    <!-- Scripts, structure left over from Require.js -->
+    <script src="./js/app/render/terrain.js"></script>
+    <script src="./js/main.js"></script>
+
 
 </body>
 </html>
