--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     
     <!-- Javascript libraries -->
     <script src="./js/lib/three.min.js"></script>
+    <script src="./js/lib/OrbitControls.js"></script>
 
 </head>
 
