--- a/test/turtle.html
+++ b/test/turtle.html
@@ -23,6 +23,13 @@
         renderer.setSize( window.innerWidth, window.innerHeight );
         document.body.appendChild( renderer.domElement );
 
+        // Create axis
+        var axis = new THREE.AxisHelper(10);
+        scene.add(axis);
+
+        var grid = new THREE.GridHelper(20, 1);
+        scene.add(grid);
+
         // Construct objects
         var t = new Turtle(scene, material);
         var turtle_string = [new Action(t._pitch, Math.PI / 2),
@@ -33,10 +40,13 @@
                             new Action(t._F, 20),
                             new Action(t._yaw, Math.PI / 2),
                             new Action(t._F, 20)];
+        //var turtle_string = [new Action(t._yaw, Math.PI / 4), new Action(t._F, 10)];
+        //var turtle_string = [new Action(t._F, 10)];
         var material = new THREE.MeshBasicMaterial({color: 0x00ff00});
 
         // Position camera
-        camera.position.z = 5;
+        camera.position.z = 20;
+        camera.position.y = 20;
 
         // Run tutle
         t.run(turtle_string);
