Stupid error is stupid

--- a/test/turtle.html
+++ b/test/turtle.html
@@ -31,7 +31,7 @@
         scene.add(grid);
 
         // Construct objects
-        var t = new Turtle(scene, material);
+        var t = new Turtle(scene, material, 0.25);
         var turtle_string = [new Action(t._pitch, Math.PI / 2),
                             new Action(t._F, 20),
                             new Action(t._yaw, Math.PI / 2),
