--- a/test/lsys_console.html
+++ b/test/lsys_console.html
@@ -13,39 +13,43 @@
     <script src="../js/app/gen/lsys.js"></script>
     <script>
         // Construct objects
-        var rules = new LSystem.RuleSet();
-        rules.initial = [new LSystem.Production('B', [2]), new LSystem.Production('A', [4, 4])];
-        rules.rules = [
-            new LSystem.Rule('A', function(p) { return p.args[1] <= 3 }, [
-                new LSystem.Production('A', null, function(args) {
-                    this.args = [args[0]*2, args[0]+args[1]];
-                })
-            ]),
-            new LSystem.Rule('A', function(p) { return p.args[1] > 3 }, [
-                new LSystem.Production('B', null, function(args) {
-                    this.args = [args[0]];
-                }),
-                new LSystem.Production('A', null, function(args) {
-                    this.args = [args[0]/args[1], 0];
-                })
-            ]),
-            new LSystem.Rule('B', function(p) { return p.args[0] < 1 }, [
-                new LSystem.Production('C', null, null)
-            ]),
-            new LSystem.Rule('B', function(p) { return p.args[0] >= 1 }, [
-                new LSystem.Production('B', null, function(args) {
-                    this.args = [args[0]-1];
-                })
-            ])
-        ];
-        var sys = new LSystem(rules);
+        function test(rec_depth) {
+            var rules = new LSystem.RuleSet();
+            rules.initial = [new LSystem.Production('B', [2]), new LSystem.Production('A', [4, 4])];
+            rules.rules = [
+                new LSystem.Rule('A', function(p) { return p.args[1] <= 3 }, [
+                    new LSystem.Production('A', null, function(args) {
+                        this.args = [args[0]*2, args[0]+args[1]];
+                    })
+                ]),
+                new LSystem.Rule('A', function(p) { return p.args[1] > 3 }, [
+                    new LSystem.Production('B', null, function(args) {
+                        this.args = [args[0]];
+                    }),
+                    new LSystem.Production('A', null, function(args) {
+                        this.args = [args[0]/args[1], 0];
+                    })
+                ]),
+                new LSystem.Rule('B', function(p) { return p.args[0] < 1 }, [
+                    new LSystem.Production('C', null, null)
+                ]),
+                new LSystem.Rule('B', function(p) { return p.args[0] >= 1 }, [
+                    new LSystem.Production('B', null, function(args) {
+                        this.args = [args[0]-1];
+                    })
+                ])
+            ];
+            var sys = new LSystem(rules);
 
-        // Manually set max depth
-        sys.MAX_DEPTH = 1;
+            // Manually set max depth
+            sys.MAX_DEPTH = rec_depth;
 
-        // Build and print
-        sys.build();
-        sys.printSystem(); // LET THE BODIES HIT THE FLOOR LET THE BODIES HIT THE FLOOR LET THE BOD
+            // Build and print
+            sys.build();
+            sys.printSystem(); // LET THE BODIES HIT THE FLOOR LET THE BODIES HIT THE FLOOR LET THE BOD
+
+        }
+        console.info("Use test(recursion_depth) to test L-System");
     </script>
 </body>
 </html>
