--- a/test/turtle/turtle1.html
+++ b/test/turtle/turtle1.html
@@ -7,15 +7,16 @@
     <style>canvas { width: 100%; height: 100% }</style>
 
     <!-- Javascript libraries -->
-    <script src="../js/lib/three.min.js"></script>
-    <script src="../js/lib/OrbitControls.js"></script>
+    <script src="../../js/lib/three.min.js"></script>
+    <script src="../../js/lib/OrbitControls.js"></script>
 
 </head>
 
 <body>
     <!-- Scripts, structure left over from Require.js -->
-    <script src="../js/app/render/turtle_graphics.js"></script>
+    <script src="../../js/app/render/turtle_graphics.js"></script>
     <script>
+        // Checks forward movement, both with and without a line
         // Construct scene
         var scene = new THREE.Scene();
         var camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
@@ -32,18 +33,18 @@
         scene.add(grid);
 
         // Construct objects
+        var material = new THREE.MeshBasicMaterial({color: 0x00ff00});
         var t = new Turtle(scene, material, 0.25);
         var turtle_string = [new Turtle.Action(t._pitch, Math.PI / 2),
                             new Turtle.Action(t._F, 20),
                             new Turtle.Action(t._yaw, Math.PI / 2),
-                            new Turtle.Action(t._F, 20),
+                            new Turtle.Action(t._f, 20),
                             new Turtle.Action(t._yaw, Math.PI / 2),
                             new Turtle.Action(t._F, 20),
                             new Turtle.Action(t._yaw, Math.PI / 2),
                             new Turtle.Action(t._F, 20)];
         //var turtle_string = [new Action(t._yaw, Math.PI / 4), new Action(t._F, 10)];
         //var turtle_string = [new Action(t._F, 10)];
-        var material = new THREE.MeshBasicMaterial({color: 0x00ff00});
 
         // Position camera
         camera.position.z = 20;
