--- a/test/tree.html
+++ b/test/tree.html
@@ -8,7 +8,7 @@
 
     <!-- Javascript libraries -->
     <script src="../js/lib/three.min.js"></script>
-    <script src="../js/lib/OrbitControls.js"></script>
+    <script src="../js/lib/TrackballControls.js"></script>
 
 </head>
 
@@ -20,7 +20,7 @@
     <script>
         // Construct scene
         var scene = new THREE.Scene();
-        var camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000 );
+        var camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 10000 );
         var renderer = new THREE.WebGLRenderer();
         renderer.setSize( window.innerWidth, window.innerHeight );
         document.body.appendChild( renderer.domElement );
@@ -47,9 +47,10 @@
 
         });
         var t = new Turtle(scene, material, 0.25);
-        var tree = new HondaTree(t);
+        //var tree = new HondaTree(t);
+        var tree = new TernaryTree(t);
         var lsys = new LSystem(tree);
-        lsys.MAX_DEPTH = 11; // limit depth
+        lsys.MAX_DEPTH = 6; // limit depth
 
         // Position camera
         camera.position.z = 80;
@@ -60,7 +61,7 @@
         t.run(lsys.system);
 
         // Add controls
-        controls = new THREE.OrbitControls(camera);
+        controls = new THREE.TrackballControls(camera);
 
         // Render
         var render = function () {
