Ternary tree working nicely

--- a/test/tree.html
+++ b/test/tree.html
@@ -53,8 +53,7 @@
         lsys.MAX_DEPTH = 6; // limit depth
 
         // Position camera
-        camera.position.z = 80;
-        camera.position.y = -80;
+        camera.position.set(-1700, -900, 1024);
 
         // Run tutle
         lsys.build(true);
