--- a/main.html
+++ b/main.html
@@ -4,18 +4,119 @@
 
     <title>Will Jackson's Garden of Eden</title>
     <style>canvas { width: 100%; height: 100% }</style> 
+    <link rel="stylesheet" type="text/css" href="style.css"/>
     
     <!-- Javascript libraries -->
     <script src="./js/lib/three.min.js"></script>
+    <!--<script src="./js/lib/FirstPersonControls.js"></script>-->
     <script src="./js/lib/OrbitControls.js"></script>
+    <script src="./js/lib/PointerLockControls.js"></script>
 
 </head>
 
 <body>
+    <div id="blocker">
+        <div id="instructions">
+            <span style="font-size:40px">Click to play</span>
+            <br />
+            (W, A, S, D = Move, SPACE = Jump, MOUSE = Look around)
+        </div>
+    </div>
+
     <!-- Scripts, structure left over from Require.js -->
+    <script>
+        var controls;
+        var blocker = document.getElementById('blocker');
+        var instructions = document.getElementById('instructions');
+
+        // http://www.html5rocks.com/en/tutorials/pointerlock/intro/
+        var havePointerLock = 'pointerLockElement' in document ||
+            'mozPointerLockElement' in document ||
+            'webkitPointerLockElement' in document;
+
+        if ( havePointerLock ) {
+            var element = document.body;
+            var pointerlockchange = function ( event ) {
+                if (document.pointerLockElement === element ||
+                    document.mozPointerLockElement === element ||
+                    document.webkitPointerLockElement === element )
+                {
+                    controls.enabled = true;
+                    blocker.style.display = 'none';
+
+                }
+                else {
+                    controls.enabled = false;
+
+                    blocker.style.display = '-webkit-box';
+                    blocker.style.display = '-moz-box';
+                    blocker.style.display = 'box';
+
+                    instructions.style.display = '';
+
+                }
+            }
+            var pointerlockerror = function ( event ) {
+                instructions.style.display = '';
+
+            }
+
+            // Hook pointer lock state change events
+            document.addEventListener( 'pointerlockchange', pointerlockchange, false );
+            document.addEventListener( 'mozpointerlockchange', pointerlockchange, false );
+            document.addEventListener( 'webkitpointerlockchange', pointerlockchange, false );
+
+            document.addEventListener( 'pointerlockerror', pointerlockerror, false );
+            document.addEventListener( 'mozpointerlockerror', pointerlockerror, false );
+            document.addEventListener( 'webkitpointerlockerror', pointerlockerror, false );
+
+            instructions.addEventListener( 'click', function ( event ) {
+                instructions.style.display = 'none';
+
+                // Ask the browser to lock the pointer
+                element.requestPointerLock = element.requestPointerLock ||
+                    element.mozRequestPointerLock ||
+                    element.webkitRequestPointerLock;
+
+                if (/Firefox/i.test(navigator.userAgent)) {
+                    var fullscreenchange = function ( event ) {
+                        if (document.fullscreenElement === element ||
+                            document.mozFullscreenElement === element ||
+                            document.mozFullScreenElement === element )
+                        {
+                            document.removeEventListener( 'fullscreenchange', fullscreenchange );
+                            document.removeEventListener( 'mozfullscreenchange', fullscreenchange );
+
+                            element.requestPointerLock();
+
+                        }
+                    }
+
+                    document.addEventListener( 'fullscreenchange', fullscreenchange, false );
+                    document.addEventListener( 'mozfullscreenchange', fullscreenchange, false );
+
+                    element.requestFullscreen = element.requestFullscreen ||
+                        element.mozRequestFullscreen ||
+                        element.mozRequestFullScreen ||
+                        element.webkitRequestFullscreen;
+
+                    element.requestFullscreen();
+
+                }
+                else {
+                    element.requestPointerLock();
+
+                }
+            }, false );
+        }
+        else {
+            instructions.innerHTML = 'Your browser doesn\'t seem to support Pointer Lock API';
+
+        }
+
+    </script>
     <script src="./js/app/render/terrain.js"></script>
     <script src="./js/main.js"></script>
-
 
 </body>
 </html>
