--- a/main.html
+++ b/main.html
@@ -12,6 +12,11 @@
     <script src="./js/lib/OrbitControls.js"></script>
     <script src="./js/lib/PointerLockControls.js"></script>
 
+    <!-- GoE scripts -->
+    <script src="./js/app/gen/lsys.js"></script>
+    <script src="./js/app/render/turtle_graphics.js"></script>
+    <script src="./js/app/gen/lsys_rules.js"></script>
+    <script src="./js/app/render/terrain.js"></script>
 </head>
 
 <body>
@@ -115,7 +120,6 @@
         }
 
     </script>
-    <script src="./js/app/render/terrain.js"></script>
     <script src="./js/main.js"></script>
 
 </body>
