--- a/test/terrain.html
+++ b/test/terrain.html
@@ -6,16 +6,59 @@
     <style>canvas { width: 100%; height: 100% }</style> 
     
     <!-- Javascript libraries -->
-    <script src="./js/lib/three.min.js"></script>
-    <script src="./js/lib/OrbitControls.js"></script>
+    <script src="../js/lib/three.min.js"></script>
+    <script src="../js/lib/OrbitControls.js"></script>
+
+    <!-- Debug stuff -->
+    <script src="./utils.js"></script>
 
 </head>
 
 <body>
     <!-- Scripts, structure left over from Require.js -->
-    <script src="./js/app/render/terrain.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="../js/app/render/terrain.js"></script>
+    <script>
+        // Construct scene
+        var scene = new THREE.Scene();
+        var camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 10000 );
+        var renderer = new THREE.WebGLRenderer();
+        renderer.setSize( window.innerWidth, window.innerHeight );
+        document.body.appendChild( renderer.domElement );
 
+        // Create axis
+        var axis = new THREE.AxisHelper(10);
+        scene.add(axis);
 
+        // Create grid
+        var grid = new THREE.GridHelper(20, 1);
+        //grid.rotation.x = Math.PI / 2;
+        scene.add(grid);
+
+        // Add light
+        var light = new THREE.DirectionalLight(0xffffff, 1);
+        light.shadowCameraVisible = true;
+        light.position.set(0,100,400);
+        scene.add(light);
+
+        // Construct terrain
+        var terrain = new Terrain(3);
+        var floor = terrain.build();
+        scene.add(floor);
+
+        // Position camera
+        camera.position.set(0, 30, 50);
+
+        // Add controls
+        controls = new THREE.OrbitControls(camera);
+
+        // Render
+        var render = function () {
+            requestAnimationFrame(render);
+            renderer.render(scene, camera);
+            controls.update();
+
+        };
+        render(); 
+    </script>
 </body>
 </html>
