--- a/test/trees/ternary_tree.html
+++ b/test/trees/ternary_tree.html
@@ -7,16 +7,16 @@
     <style>canvas { width: 100%; height: 100% }</style>
 
     <!-- Javascript libraries -->
-    <script src="../js/lib/three.min.js"></script>
-    <script src="../js/lib/TrackballControls.js"></script>
+    <script src="../../js/lib/three.min.js"></script>
+    <script src="../../js/lib/TrackballControls.js"></script>
 
 </head>
 
 <body>
     <!-- Scripts, structure left over from Require.js -->
-    <script src="../js/app/gen/lsys.js"></script>
-    <script src="../js/app/render/turtle_graphics.js"></script>
-    <script src="../js/app/gen/lsys_rules.js"></script>
+    <script src="../../js/app/gen/lsys.js"></script>
+    <script src="../../js/app/render/turtle_graphics.js"></script>
+    <script src="../../js/app/gen/lsys_rules.js"></script>
     <script>
         // Construct scene
         var scene = new THREE.Scene();
