--- a/main.html
+++ b/main.html
@@ -11,12 +11,14 @@
     <!--<script src="./js/lib/FirstPersonControls.js"></script>-->
     <script src="./js/lib/OrbitControls.js"></script>
     <script src="./js/lib/PointerLockControls.js"></script>
+    <script src="./test/utils.js"></script>
 
     <!-- GoE scripts -->
     <script src="./js/app/gen/lsys.js"></script>
     <script src="./js/app/render/turtle_graphics.js"></script>
     <script src="./js/app/gen/lsys_rules.js"></script>
     <script src="./js/app/render/terrain.js"></script>
+    <script src="./js/app/render/forest.js"></script>
 </head>
 
 <body>
@@ -24,7 +26,7 @@
         <div id="instructions">
             <span style="font-size:40px">Click to play</span>
             <br />
-            (W, A, S, D = Move, SPACE = Jump, MOUSE = Look around)
+            (W, A, S, D = Move, MOUSE = Look around)
         </div>
     </div>
 
