Fixed memory issues so things run sexyfast

--- a/main.html
+++ b/main.html
@@ -12,6 +12,7 @@
     <script src="./js/lib/OrbitControls.js"></script>
     <script src="./js/lib/PointerLockControls.js"></script>
     <script src="./test/utils.js"></script>
+    <script src="./js/lib/BufferGeometryUtils.js"></script>
 
     <!-- GoE scripts -->
     <script src="./js/app/gen/lsys.js"></script>
