--- a/test/turtle/turtle2.html
+++ b/test/turtle/turtle2.html
@@ -34,7 +34,7 @@
 
         // Construct objects
         var material = new THREE.MeshBasicMaterial({color: 0x00ff00});
-        var t = new Turtle(scene, material, 0.25);
+        var t = new Turtle(0.25);
         /*
         var turtle_string = [new Turtle.Action(t._roll, Math.PI),
                             new Turtle.Action(t._F, 10),
@@ -48,10 +48,10 @@
                             new Turtle.Action(t._F, 10)];
         */
 
-        var turtle_string = [new Turtle.Action(t._yaw, Math.PI),
-                            new Turtle.Action(t._F, 10),
-                            new Turtle.Action(t._pitch, Math.PI/4),
-                            new Turtle.Action(t._F, 10)];
+        var turtle_string = [new Turtle.Action(Turtle._yaw, Math.PI),
+                            new Turtle.Action(Turtle._F, 10),
+                            new Turtle.Action(Turtle._pitch, Math.PI/4),
+                            new Turtle.Action(Turtle._F, 10)];
 
         // Position camera
         camera.position.z = 20;
@@ -59,6 +59,7 @@
 
         // Run tutle
         t.run(turtle_string);
+        scene.add(new THREE.Mesh(t.geometry, material));
 
         // Add controls
         controls = new THREE.OrbitControls(camera);
