--- a/test/turtle/turtle3.html
+++ b/test/turtle/turtle3.html
@@ -34,21 +34,21 @@
 
         // Construct objects
         var material = new THREE.MeshBasicMaterial({color: 0x00ff00});
-        var t = new Turtle(scene, material, 0.25);
-        var turtle_string = [new Turtle.Action(t._push, null),
-                            new Turtle.Action(t._roll, Math.PI),
-                            new Turtle.Action(t._F, 10),
-                            new Turtle.Action(t._pitch, Math.PI/4),
-                            new Turtle.Action(t._F, 10),
-                            new Turtle.Action(t._pop),
-                            new Turtle.Action(t._yaw, Math.PI/4),
-                            new Turtle.Action(t._F, 10),
-                            new Turtle.Action(t._push),
-                            new Turtle.Action(t._pitch, -Math.PI/4),
-                            new Turtle.Action(t._F, 10),
-                            new Turtle.Action(t._pop),
-                            new Turtle.Action(t._yaw, -Math.PI/4),
-                            new Turtle.Action(t._F, 10)];
+        var t = new Turtle(0.25);
+        var turtle_string = [new Turtle.Action(Turtle._push, null),
+                            new Turtle.Action(Turtle._roll, Math.PI),
+                            new Turtle.Action(Turtle._F, 10),
+                            new Turtle.Action(Turtle._pitch, Math.PI/4),
+                            new Turtle.Action(Turtle._F, 10),
+                            new Turtle.Action(Turtle._pop),
+                            new Turtle.Action(Turtle._yaw, Math.PI/4),
+                            new Turtle.Action(Turtle._F, 10),
+                            new Turtle.Action(Turtle._push), // ERROR
+                            new Turtle.Action(Turtle._pitch, -Math.PI/4),
+                            new Turtle.Action(Turtle._F, 10),
+                            new Turtle.Action(Turtle._pop),
+                            new Turtle.Action(Turtle._yaw, -Math.PI/4),
+                            new Turtle.Action(Turtle._F, 10)];
 
         // Position camera
         camera.position.z = 20;
@@ -56,6 +56,7 @@
 
         // Run tutle
         t.run(turtle_string);
+        scene.add(new THREE.Mesh(t.geometry, material));
 
         // Add controls
         controls = new THREE.OrbitControls(camera);
