Fixed world positioning with seed within turtle_graphics

--- a/test/trees/random_tree.html
+++ b/test/trees/random_tree.html
@@ -26,8 +26,8 @@
         document.body.appendChild( renderer.domElement );
 
         // Create axis
-        //var axis = new THREE.AxisHelper(10);
-        //scene.add(axis);
+        var axis = new THREE.AxisHelper(10);
+        scene.add(axis);
 
         // Create grid
         var grid = new THREE.GridHelper(20, 1);
