--- a/test/trees/random_tree_worker.html
+++ b/test/trees/random_tree_worker.html
@@ -8,7 +8,6 @@
     <!-- Javascript libraries -->
     <script src="../../js/lib/three.min.js"></script>
     <script src="../../js/lib/TrackballControls.js"></script>
-    <script src="../../js/lib/BufferGeometryUtils.js"></script>
 
 </head>
 
@@ -31,7 +30,6 @@
 
         // Create grid
         var grid = new THREE.GridHelper(20, 1);
-        //grid.rotation.x = -Math.PI / 2;
         scene.add(grid);
 
         // Add light
@@ -46,19 +44,9 @@
             ambient: 0x666633,
 
         });
-        var t = new Turtle(0.25);
-        //var tree = new HondaTree(t);
-        var tree = new RandomTree();
-        var lsys = new LSystem(tree);
-        lsys.MAX_DEPTH = 8; // limit depth
 
         // Position camera
         camera.position.set(-13, 16, 13);
-
-        // Run tutle
-        lsys.build(true);
-        t.run(lsys.system);
-        scene.add(new THREE.Mesh(t.geometry, material));
 
         // Add controls
         controls = new THREE.TrackballControls(camera);
@@ -70,6 +58,29 @@
             controls.update();
 
         };
+
+        var loader = new THREE.BufferGeometryLoader();
+        var manager = new Worker('../../js/app/worker/forest_manager.js');
+        // Add geometry to scene
+        manager.onmessage = function(pkg) {
+            // Build mesh
+            console.log("Adding tree");
+            var geo = loader.parse(JSON.parse(pkg.data.geometry).data);
+            var mesh = new THREE.Mesh(geo, material);
+            scene.add(mesh);
+
+        };
+
+        // Send manager
+        manager.postMessage({
+            msg: 'INIT',
+            payload: {
+                seeds: [{x: 0, y: 0, z:0}],
+                num_workers: 1,
+                force_depth: 10
+            }
+        });
+
         render(); 
 
     </script>
